// Vitest Snapshot v1

exports[`Thrift Parser > view token 1`] = `
"[line=1] [type=9] [channel=0] [tokenIndex=0] [startIndex=0] [stopIndex=6]
typedef"
`;

exports[`Thrift Parser > view token 2`] = `
"[line=1] [type=51] [channel=1] [tokenIndex=1] [startIndex=7] [stopIndex=7]
 "
`;

exports[`Thrift Parser > view token 3`] = `
"[line=1] [type=28] [channel=0] [tokenIndex=2] [startIndex=8] [stopIndex=10]
map"
`;

exports[`Thrift Parser > view token 4`] = `
"[line=1] [type=29] [channel=0] [tokenIndex=3] [startIndex=11] [stopIndex=11]
<"
`;

exports[`Thrift Parser > view token 5`] = `
"[line=1] [type=46] [channel=0] [tokenIndex=4] [startIndex=12] [stopIndex=17]
string"
`;

exports[`Thrift Parser > view token 6`] = `
"[line=1] [type=50] [channel=0] [tokenIndex=5] [startIndex=18] [stopIndex=18]
,"
`;

exports[`Thrift Parser > view token 7`] = `
"[line=1] [type=49] [channel=0] [tokenIndex=6] [startIndex=19] [stopIndex=22]
Bonk"
`;

exports[`Thrift Parser > view token 8`] = `
"[line=1] [type=30] [channel=0] [tokenIndex=7] [startIndex=23] [stopIndex=23]
>"
`;

exports[`Thrift Parser > view token 9`] = `
"[line=1] [type=51] [channel=1] [tokenIndex=8] [startIndex=24] [stopIndex=24]
 "
`;

exports[`Thrift Parser > view token 10`] = `
"[line=1] [type=49] [channel=0] [tokenIndex=9] [startIndex=25] [stopIndex=31]
MapType"
`;

exports[`Thrift Parser > view token 11`] = `
"[line=1] [type=51] [channel=1] [tokenIndex=10] [startIndex=32] [stopIndex=33]


"
`;

exports[`Thrift Parser > view token 12`] = `
"[line=3] [type=14] [channel=0] [tokenIndex=11] [startIndex=34] [stopIndex=39]
struct"
`;

exports[`Thrift Parser > view token 13`] = `
"[line=3] [type=51] [channel=1] [tokenIndex=12] [startIndex=40] [stopIndex=40]
 "
`;

exports[`Thrift Parser > view token 14`] = `
"[line=3] [type=49] [channel=0] [tokenIndex=13] [startIndex=41] [stopIndex=62]
OptionalSetDefaultTest"
`;

exports[`Thrift Parser > view token 15`] = `
"[line=3] [type=51] [channel=1] [tokenIndex=14] [startIndex=63] [stopIndex=63]
 "
`;

exports[`Thrift Parser > view token 16`] = `
"[line=3] [type=11] [channel=0] [tokenIndex=15] [startIndex=64] [stopIndex=64]
{"
`;

exports[`Thrift Parser > view token 17`] = `
"[line=3] [type=51] [channel=1] [tokenIndex=16] [startIndex=65] [stopIndex=67]

  "
`;

exports[`Thrift Parser > view token 18`] = `
"[line=4] [type=37] [channel=0] [tokenIndex=17] [startIndex=68] [stopIndex=68]
1"
`;

exports[`Thrift Parser > view token 19`] = `
"[line=4] [type=19] [channel=0] [tokenIndex=18] [startIndex=69] [stopIndex=69]
:"
`;

exports[`Thrift Parser > view token 20`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=19] [startIndex=70] [stopIndex=70]
 "
`;

exports[`Thrift Parser > view token 21`] = `
"[line=4] [type=21] [channel=0] [tokenIndex=20] [startIndex=71] [stopIndex=78]
optional"
`;

exports[`Thrift Parser > view token 22`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=21] [startIndex=79] [stopIndex=79]
 "
`;

exports[`Thrift Parser > view token 23`] = `
"[line=4] [type=31] [channel=0] [tokenIndex=22] [startIndex=80] [stopIndex=82]
set"
`;

exports[`Thrift Parser > view token 24`] = `
"[line=4] [type=29] [channel=0] [tokenIndex=23] [startIndex=83] [stopIndex=83]
<"
`;

exports[`Thrift Parser > view token 25`] = `
"[line=4] [type=46] [channel=0] [tokenIndex=24] [startIndex=84] [stopIndex=89]
string"
`;

exports[`Thrift Parser > view token 26`] = `
"[line=4] [type=30] [channel=0] [tokenIndex=25] [startIndex=90] [stopIndex=90]
>"
`;

exports[`Thrift Parser > view token 27`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=26] [startIndex=91] [stopIndex=91]
 "
`;

exports[`Thrift Parser > view token 28`] = `
"[line=4] [type=49] [channel=0] [tokenIndex=27] [startIndex=92] [stopIndex=103]
with_default"
`;

exports[`Thrift Parser > view token 29`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=28] [startIndex=104] [stopIndex=104]
 "
`;

exports[`Thrift Parser > view token 30`] = `
"[line=4] [type=8] [channel=0] [tokenIndex=29] [startIndex=105] [stopIndex=105]
="
`;

exports[`Thrift Parser > view token 31`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=30] [startIndex=106] [stopIndex=106]
 "
`;

exports[`Thrift Parser > view token 32`] = `
"[line=4] [type=34] [channel=0] [tokenIndex=31] [startIndex=107] [stopIndex=107]
["
`;

exports[`Thrift Parser > view token 33`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=32] [startIndex=108] [stopIndex=108]
 "
`;

exports[`Thrift Parser > view token 34`] = `
"[line=4] [type=48] [channel=0] [tokenIndex=33] [startIndex=109] [stopIndex=114]
\\"test\\""
`;

exports[`Thrift Parser > view token 35`] = `
"[line=4] [type=50] [channel=0] [tokenIndex=34] [startIndex=115] [stopIndex=115]
,"
`;

exports[`Thrift Parser > view token 36`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=35] [startIndex=116] [stopIndex=116]
 "
`;

exports[`Thrift Parser > view token 37`] = `
"[line=4] [type=48] [channel=0] [tokenIndex=36] [startIndex=117] [stopIndex=123]
\\"testb\\""
`;

exports[`Thrift Parser > view token 38`] = `
"[line=4] [type=35] [channel=0] [tokenIndex=37] [startIndex=124] [stopIndex=124]
]"
`;

exports[`Thrift Parser > view token 39`] = `
"[line=4] [type=51] [channel=1] [tokenIndex=38] [startIndex=125] [stopIndex=125]

"
`;

exports[`Thrift Parser > view token 40`] = `
"[line=5] [type=12] [channel=0] [tokenIndex=39] [startIndex=126] [stopIndex=126]
}"
`;

exports[`Thrift Parser > view token 41`] = `
"[line=5] [type=51] [channel=1] [tokenIndex=40] [startIndex=127] [stopIndex=127]

"
`;

exports[`Thrift Parser > view token 42`] = `
"[line=6] [type=-1] [channel=0] [tokenIndex=41] [startIndex=128] [stopIndex=127]
<EOF>"
`;
